--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <script type="module" src="page.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
 <body>
 <div>
